- Implemented inter-app messaging

--- a/Peppermint/ChatContactTableViewCell.xib
+++ b/Peppermint/ChatContactTableViewCell.xib
@@ -46,11 +46,11 @@ via okankurtulus@gmail.com</string>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dvW-3K-qXw">
-                        <rect key="frame" x="375" y="28" width="30" height="16"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dvW-3K-qXw">
+                        <rect key="frame" x="380" y="28" width="25" height="16"/>
                         <color key="backgroundColor" red="0.0" green="0.52760416666666665" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="XKN-K8-MaY"/>
+                            <constraint firstAttribute="width" constant="25" id="XKN-K8-MaY"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
