--- a/Peppermint/Base.lproj/Main.storyboard
+++ b/Peppermint/Base.lproj/Main.storyboard
@@ -698,12 +698,12 @@
             <objects>
                 <tableViewController storyboardIdentifier="AddContactViewController" id="pyr-NR-460" userLabel="AddContactViewController" customClass="AddContactViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="lc9-2P-XTo">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.92941176469999998" green="0.95294117649999999" blue="0.94509803920000002" alpha="1" colorSpace="calibratedRGB"/>
                         <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <view key="tableFooterView" contentMode="scaleToFill" id="PnR-52-XkD">
+                        <view key="tableFooterView" clipsSubviews="YES" contentMode="scaleToFill" id="PnR-52-XkD">
                             <rect key="frame" x="0.0" y="260" width="320" height="1000"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
@@ -824,7 +824,7 @@ email contact or both</string>
                                                     <rect key="frame" x="0.0" y="19" width="320" height="1"/>
                                                     <color key="backgroundColor" red="0.73725490199999999" green="0.73333333329999995" blue="0.75686274509999996" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="1" id="V8Z-MT-lAg"/>
+                                                        <constraint firstAttribute="height" priority="990" constant="1" id="V8Z-MT-lAg"/>
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_Please enter a valid name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="soB-Wv-3Sc">
@@ -902,7 +902,7 @@ email contact or both</string>
                                                     <rect key="frame" x="0.0" y="19" width="320" height="1"/>
                                                     <color key="backgroundColor" red="0.73725490199999999" green="0.73333333329999995" blue="0.75686274509999996" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="1" id="0PG-gr-QkI"/>
+                                                        <constraint firstAttribute="height" priority="990" constant="1" id="0PG-gr-QkI"/>
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_Please enter a valid name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gDm-fc-dNI">
@@ -980,7 +980,7 @@ email contact or both</string>
                                                     <rect key="frame" x="0.0" y="19" width="320" height="1"/>
                                                     <color key="backgroundColor" red="0.73725490199999999" green="0.73333333329999995" blue="0.75686274509999996" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="1" id="4MG-CJ-Ia0"/>
+                                                        <constraint firstAttribute="height" priority="990" constant="1" id="4MG-CJ-Ia0"/>
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_Please enter a valid name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eUC-Vz-299">
@@ -1025,13 +1025,13 @@ email contact or both</string>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="avatarImageView" destination="P5y-eU-OxC" id="lSC-WK-BTg"/>
                         <outlet property="emailImageView" destination="sqM-B5-gnk" id="Iqf-bU-dBF"/>
                         <outlet property="emailTextField" destination="HCM-xd-FfJ" id="F19-Cn-9LW"/>
                         <outlet property="emailWarningCell" destination="dgt-Ym-aar" id="XBP-cv-Phg"/>
                         <outlet property="emailWarningLabel" destination="gDm-fc-dNI" id="jsd-Xm-XAd"/>
-                        <outlet property="explanationLabel" destination="v18-70-8vr" id="Ddq-t0-t2T"/>
                         <outlet property="firstNameTextField" destination="dv5-8A-bHh" id="1V7-2u-vzP"/>
                         <outlet property="lastNameTextField" destination="QWV-QQ-i2D" id="38H-Ve-MrA"/>
                         <outlet property="nameSurnameWarningCell" destination="Q3Z-lh-9XR" id="dWe-jB-5bX"/>
@@ -1041,6 +1041,7 @@ email contact or both</string>
                         <outlet property="phoneNumberWarningCell" destination="ZFq-aK-nHX" id="MrI-UZ-hyN"/>
                         <outlet property="phoneNumberWarningLabel" destination="eUC-Vz-299" id="mXi-V1-gVX"/>
                         <outlet property="saveContactBarButtonItem" destination="w7i-KX-d7P" id="Rb9-4S-0W3"/>
+                        <outlet property="tableBottomView" destination="PnR-52-XkD" id="T3z-Lp-UMh"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="163-c9-WQw" userLabel="First Responder" sceneMemberID="firstResponder"/>
